Correction background-color / rotation sur fleche collapse

--- a/kasa/src/styles/Dropdown.scss
+++ b/kasa/src/styles/Dropdown.scss
@@ -59,7 +59,7 @@
     overflow: hidden;
     transition: max-height 0.3s ease-out, padding 0.3s ease-out; 
     padding: 0 10px;
-    background-color:$secondary-color;
+    background-color:$background-color;
     color: $primary-color;
     font-family: Montserrat, sans-serif;
     font-size: 24px;
