--- a/kasa/src/styles/DropdownFL.scss
+++ b/kasa/src/styles/DropdownFL.scss
@@ -20,23 +20,24 @@
   overflow: hidden;
 }
 
+
 .dropdown-header-fl {
   padding: 10px;
-    background-color: $primary-color;
-    cursor: pointer;    
-    color: white;
-    font-family: Montserrat, sans-serif;
-    font-size: 24px;
-    font-weight: 500;
-    position: relative; 
-    transition: background-color 0.3s ease; 
-    border-radius: 15px;
-
-    @media (max-width: 768px) {
-        font-size: 13px;
-    }
-
+  background-color: $primary-color;
+  cursor: pointer;
+  color: white;
+  font-family: Montserrat, sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  position: relative; 
+  transition: background-color 0.3s ease; 
+  border-radius: 15px;
+  
+  @media (max-width: 768px) {
+    font-size: 13px;
+  }
 }
+
 
 .dropdown-header-fl::after {
   content: '❮';
@@ -48,34 +49,39 @@
   transition: transform 0.3s ease;
 }
 
+
 .dropdown-header-fl.active::after {
   transform: translateY(-50%) rotate(90deg); 
 }
 
+
 .dropdown-content-fl {
   max-height: 0;
-    overflow: hidden;    
-    padding: 0 10px;
-    background-color: $secondary-color;
-    color: $primary-color;
-    font-family: Montserrat, sans-serif;
-    font-size: 24px;
-    font-weight: 400;
+  overflow: hidden;    
+  padding: 0 10px;
+  background-color: $background-color;
+  color: $primary-color;
+  font-family: Montserrat, sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  transition: max-height 0.3s ease;
 
-    @media (max-width: 768px) {
-        font-size: 12px;
-    }
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
 }
+
 
 .dropdown-content-fl.show {
   max-height: fit-content;
   padding: 10px;
   margin-top: -26px;
   border-radius: 15px;
+
   @media (max-width: 768px) {
     font-size: 12px;
     padding-top: 24px;
-}
+  }
 }
 
 .dropdown-content-fl ul {
